--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.3.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -41,15 +47,11 @@
             <version>4.2.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.context</artifactId>
-            <version>3.2.5.RELEASE</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.9</version>
         </dependency>
-        <dependency>
-            <groupId>eae.core</groupId>
-            <artifactId>eae-service</artifactId>
-            <version>7.0.0.5</version>
-        </dependency>
+        
 
     </dependencies>
     <properties>
