--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,17 @@
             <artifactId>testng</artifactId>
             <version>6.9.9</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.orm</artifactId>
+            <version>3.2.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.9.0.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
