ActivityDAOTest upgraded: now functional, uses Hibernate Minor changes in configuration (annotations) and dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
             <version>1.6.4.RELEASE</version>
             <type>jar</type>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.10.2.0</version>
+        </dependency>
 
     </dependencies>
     <properties>
