--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <version>1.0</version>
     <name>Sports activity manager</name>
+    <!--TOTO: zrevidovat-->
     <dependencyManagement>
         <dependencies>
             <dependency>
