--- a/sportsActivityManager-service/pom.xml
+++ b/sportsActivityManager-service/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>sportsActivityManager-persistance</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>sportsActivityManager-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 </project>
