--- a/sportsActivityManager-service/pom.xml
+++ b/sportsActivityManager-service/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>cz.muni.fi.pa165</groupId>
             <artifactId>sportsActivityManager-api</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
