--- a/sportsActivityManager-service/pom.xml
+++ b/sportsActivityManager-service/pom.xml
@@ -18,6 +18,13 @@
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
             <version>5.5.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>cz.muni.fi.pa165</groupId>
@@ -27,14 +34,12 @@
         <dependency>
             <groupId>cz.muni.fi.pa165</groupId>
             <artifactId>sportsActivityManager-api</artifactId>
-            <version>1.0</version>
-            <type>jar</type>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>2.0.2-beta</version>
-            <scope>test</scope>
             <type>jar</type>
         </dependency>
     </dependencies>
