--- a/sportsActivityManager-api/pom.xml
+++ b/sportsActivityManager-api/pom.xml
@@ -14,5 +14,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.3.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
