--- a/sportsActivityManager-service/pom.xml
+++ b/sportsActivityManager-service/pom.xml
@@ -9,6 +9,7 @@
     <artifactId>sportsActivityManager-service</artifactId>
     <name>Sports activity manager service</name>
     <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -35,6 +36,12 @@
             <artifactId>mockito-all</artifactId>
             <version>2.0.2-beta</version>
             <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.3.RELEASE</version>
             <type>jar</type>
         </dependency>
     </dependencies>
