--- a/sportsActivityM-rest/pom.xml
+++ b/sportsActivityM-rest/pom.xml
@@ -51,6 +51,10 @@
             <version>4.2.3.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.7.0-rc2</version>
