--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,6 @@
     <name>Sports activity manager</name>
     <!--TOTO: zrevidovat-->
     <dependencies>
-        <dependency>
-            <groupId>io.spring.platform</groupId>
-            <artifactId>platform-bom</artifactId>
-            <!-- <version>1.1.3.RELEASE</version> -->
-            <version>1.0.1.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
 
     </dependencies>
     <build>
@@ -24,6 +16,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
