--- a/sportsActivityM-rest/pom.xml
+++ b/sportsActivityM-rest/pom.xml
@@ -11,6 +11,7 @@
     <packaging>war</packaging>
 
     <artifactId>sportsActivityManager-rest</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
 
@@ -41,6 +42,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>sportsActivityManager-sample-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.0</version>
@@ -53,6 +59,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
