--- a/sportsActivityM-sample-data/pom.xml
+++ b/sportsActivityM-sample-data/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sample-data</artifactId>
+    <artifactId>sportsActivityManager-sample-data</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
