- package paths clearing/refactoring - little dependency clean-up - resolved problems with Jackson in REST - User entity rest should now work - rest should now be deployable and runnable on Tomcat (http://localhost:8080/rest/users) also from terminal (from REST module dir using "mvn tomcat7:run-war")

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
     <version>1.0</version>
     <name>Sports activity manager</name>
-    <!--TOTO: zrevidovat-->
+    <!--TODO: zrevidovat-->
 
     <build>
         <plugins>
@@ -29,5 +29,6 @@
         <module>sportsActivityManager-service</module>
         <module>sportsActivityM-rest</module>
         <module>sportsActivityM-sample-data</module>
+        <module>sportsActivityM-spring-mvc</module>
     </modules>
 </project>
