- added basic functional spring mvc interface for user entity (deploy by mvn tomcat7:run-war on: http://localhost:8080/pa165/mvc/user/list/all)

--- a/sportsActivityM-rest/pom.xml
+++ b/sportsActivityM-rest/pom.xml
@@ -23,7 +23,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:8080</url>
+                    <url>http://localhost:8080/pa165</url>
                     <path>/rest</path>
                 </configuration>
             </plugin>
