--- a/sportsActivityM-spring-mvc/pom.xml
+++ b/sportsActivityM-spring-mvc/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
 
     <artifactId>sportActivityM-spring-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -33,18 +34,18 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-api</artifactId>
-            <version>8.0.30</version>
+            <version>7.0.61</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-spec</artifactId>
-            <version>1.2.5</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-impl</artifactId>
-            <version>1.2.5</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -75,12 +76,22 @@
 
     <build>
         <plugins>
+            <!-- Servlet 3.0 allows no web.xml deployment descriptor -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/pa165/rest</path>
+                    <url>http://localhost:8080</url>
+                    <path>/pa165/mvc</path>
                 </configuration>
             </plugin>
         </plugins>
