- demonstrative functionality for 3. milestone implemented on spring-mvc web interface: Retrieve for all entities, Create and Delete for Activity entity. (deploy by mvn tomcat7:run-war from mvc module on: http://localhost:8080/pa165/record/list)
- REST interface implemented for Activity entity
(deploy by mvn tomcat7:run-war from REST module on: http://localhost:8080/rest/users/all)

--- a/sportsActivityM-spring-mvc/pom.xml
+++ b/sportsActivityM-spring-mvc/pom.xml
@@ -72,6 +72,13 @@
             <version>5.2.2.Final</version>
         </dependency>
 
+        <!--Logger-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <version>1.3.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -91,7 +98,7 @@
                 <version>2.2</version>
                 <configuration>
                     <url>http://localhost:8080</url>
-                    <path>/pa165/mvc</path>
+                    <path>/pa165</path>
                 </configuration>
             </plugin>
         </plugins>
