--- a/sportsActivityManager-api/pom.xml
+++ b/sportsActivityManager-api/pom.xml
@@ -20,5 +20,10 @@
             <version>4.2.3.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
     </dependencies>
 </project>
