--- a/sportsActivityM-spring-mvc/pom.xml
+++ b/sportsActivityM-spring-mvc/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.2.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.7.Final</version>
+        </dependency>
 
         <!--Logger-->
         <dependency>
